[package]
name = "bevyfield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.7.0"
gl = "0.14.0"
glfw = "0.45.0"
cgmath = "0.18.0"
dreamfield_renderer = { git = "https://github.com/catchouli/dreamfield" }
dreamfield_macros = { git = "https://github.com/catchouli/dreamfield" }
dreamfield_traits = { git = "https://github.com/catchouli/dreamfield" }
